--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
+    "gulp-exec": "^3.0.2",
     "gulp-foreach": "^0.1.0",
     "gulp-mocha": "^6.0.0",
     "gulp-rename": "^1.4.0",
