Update to gulp4

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "http://gitlab.3kles.local/corejsteam/3kles-corebe",
   "scripts": {
-    "dev": "nodemon --exec ts-node index.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
     "build": "gulp transpile",
     "prod": "gulp prod"
   },
@@ -64,7 +64,7 @@
     "babelify": "^10.0.0",
     "browserify": "^16.2.2",
     "glob": "^7.1.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-exec": "^3.0.2",
@@ -74,7 +74,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tap": "^1.0.1",
     "gulp-terser": "^1.1.5",
-    "gulp-use-tsconfig": "^1.2.2",
+    "gulp-use-tsconfig": "^1.2.4",
     "gulp-util": "^3.0.8",
     "merge-stream": "^1.0.1",
     "run-sequence": "^2.2.1",
