--- a/package.json
+++ b/package.json
@@ -85,5 +85,8 @@
     "presets": [
       "env"
     ]
+  },
+  "publishConfig": {
+    "registry": "http://192.168.111.23:8081/repository/npm-3kles/"
   }
 }
