--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ before_script:
 build:
   stage: build
   script:
+    - npm config ls -l
     - npm install
     - npm i -g gulp
     - npm i --savedev
