--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-preset-env": "^1.7.0",
     "babelify": "^10.0.0",
     "browserify": "^16.2.2",
+    "event-stream": "^4.0.1",
     "glob": "^7.1.3",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
