--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@3kles/3kles-corebe",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "3KLES Core BackEnd",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -28,7 +28,7 @@
     "prod": "gulp build-prod"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "1.19.2",
     "compression": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
