--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tap": "^1.0.1",
     "gulp-terser": "^1.1.5",
-    "gulp-use-tsconfig": "^1.2.4",
+    "gulp-use-tsconfig": "1.2.4",
     "gulp-util": "^3.0.8",
     "merge-stream": "^1.0.1",
     "run-sequence": "^2.2.1",
