--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "compression": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "express-jwt": "^5.3.1",
     "express-jwt-blacklist": "^1.1.0",
     "fs": "0.0.1-security",
