--- a/package.json
+++ b/package.json
@@ -23,56 +23,56 @@
   },
   "homepage": "http://gitlab.3kles.local/3kles/lib/corejs/3kles-corebe",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "node -r ts-node/register src/app.ts ",
     "build": "gulp transpile",
     "prod": "gulp build-prod"
   },
   "dependencies": {
-    "body-parser": "1.19.2",
-    "compression": "^1.7.2",
+    "body-parser": "1.20.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "4.17.1",
-    "express-jwt": "^5.3.1",
+    "dotenv": "^16.0.3",
+    "express": "4.18.1",
+    "express-jwt": "^7.7.5",
     "express-jwt-blacklist": "^1.1.0",
     "fs": "0.0.1-security",
-    "helmet": "^3.12.1",
+    "helmet": "^6.0.0",
     "http": "0.0.0",
-    "joi": "^13.6.0",
-    "jsonwebtoken": "^8.2.1",
-    "morgan": "^1.9.0",
+    "joi": "^17.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "ts-node": "^5.0.1",
-    "typescript": "^4.0.0",
-    "@babel/core": "^7.1.0",
-    "@types/compression": "0.0.36",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "@babel/core": "^7.19.3",
+    "@types/compression": "1.7.2",
     "@types/del": "^3.0.1",
-    "@types/dotenv": "^4.0.3",
-    "@types/gulp": "^4.0.5",
-    "@types/gulp-uglify": "^3.0.5",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^9.4.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/gulp": "^4.0.9",
+    "@types/gulp-uglify": "^3.0.7",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.8.2",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babelify": "^10.0.0",
-    "browserify": "^16.2.2",
+    "browserify": "^17.0.0",
     "event-stream": "^4.0.1",
-    "glob": "^7.1.3",
+    "glob": "^8.0.3",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
-    "gulp-exec": "^3.0.2",
+    "gulp-exec": "^5.0.0",
     "gulp-foreach": "^0.1.0",
-    "gulp-mocha": "^6.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-tap": "^1.0.1",
-    "gulp-terser": "^1.1.5",
-    "gulp-use-tsconfig": "1.2.4",
+    "gulp-mocha": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-tap": "^2.0.0",
+    "gulp-terser": "^2.1.0",
+    "gulp-use-tsconfig": "1.5.4",
     "gulp-util": "^3.0.8",
-    "merge-stream": "^1.0.1",
+    "merge-stream": "^2.0.0",
     "run-sequence": "^2.2.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
