--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prod": "gulp build-prod"
   },
   "dependencies": {
+    "async_hooks": "^1.0.0",
     "body-parser": "1.20.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
