fix: init version with eslint and webpack builder

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,15 @@
 build
 node_modules
 src
-nodemon.json
 index.ts
-gulpfile.js
 tsconfig.json
-tslint.json
+eslintrc.json
 package-lock.json
 yarn.lock
+jest.config.js
+webpack.config.js
+*.yml
+*.md
+.*ignore
+.env
+reports
