--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@3kles/3kles-corebe",
-  "version": "2.6.5",
+  "version": "3.0.0",
   "description": "3KLES Core BackEnd",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -24,63 +24,54 @@
   "homepage": "http://gitlab.3kles.local/3kles/lib/corejs/3kles-corebe",
   "scripts": {
     "dev": "node -r ts-node/register src/app.ts ",
-    "build": "gulp transpile",
-    "prod": "gulp build-prod"
+    "build": "webpack --config webpack.config.js",
   },
   "dependencies": {
-    "body-parser": "1.19.2",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "4.17.3",
-    "express-jwt": "^7.7.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "express-jwt-blacklist": "^1.1.0",
     "fs": "0.0.1-security",
-    "helmet": "^6.0.0",
+    "helmet": "^7.1.0",
     "http": "0.0.0",
-    "joi": "^17.6.2",
-    "jsonwebtoken": "^8.5.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "pino-http": "^8.3.3"
+    "pino-http": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@types/compression": "1.7.2",
-    "@types/del": "^3.0.1",
-    "@types/dotenv": "^6.1.1",
-    "@types/gulp": "^4.0.9",
-    "@types/gulp-uglify": "^3.0.7",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.8.2",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
-    "event-stream": "^4.0.1",
-    "glob": "^8.0.3",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-exec": "^5.0.0",
-    "gulp-foreach": "^0.1.0",
-    "gulp-mocha": "^8.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-tap": "^2.0.0",
-    "gulp-terser": "^2.1.0",
-    "gulp-use-tsconfig": "1.5.3",
-    "gulp-util": "^3.0.8",
-    "merge-stream": "^2.0.0",
-    "run-sequence": "^2.2.1",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "compression-webpack-plugin": "^11.1.0",
+    "crypto-browserify": "^3.12.0",
+    "eslint": "^9.9.0",
+    "https-browserify": "^1.0.0",
+    "jest": "^29.7.0",
+    "os-browserify": "^0.3.0",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.4",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
+    "typescript": "^5.5.4",
+    "url": "^0.11.4",
+    "vm-browserify": "^1.1.2",
+    "webpack": "^5.94.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4"
   }
 }
