--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "http://gitlab.3kles.local/3kles/lib/corejs/3kles-corebe",
   "scripts": {
     "dev": "node -r ts-node/register src/app.ts ",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
